# Learn_Opencv_cpp

./: .gitignore  CMakeLists.txt  DisplayImage  README.md  makefile
src/: main.cpp
src/includes/: basicFuntions.cpp  basicFuntions.h
