cmake_minimum_required(VERSION 3.12)
project( DisplayImage.out )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
file(GLOB DisplayImage_SRC CONFIGURE_DEPENDS src/*.cpp src/includes/*.cpp)
add_executable( DisplayImage.out ${DisplayImage_SRC} )
target_link_libraries( DisplayImage.out ${OpenCV_LIBS} )